--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-windows": "0.70.10"
   },
   "devDependencies": {
@@ -29,10 +30,10 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "metro-config": "^0.72.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3",
-    "metro-config": "^0.72.3"
+    "typescript": "^4.8.3"
   },
   "jest": {
     "preset": "react-native",
