--- a/windows/SQLiteStorageExample/SQLiteStorageExample.vcxproj.filters
+++ b/windows/SQLiteStorageExample/SQLiteStorageExample.vcxproj.filters
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
+    <None Include="www\test.db">
+      <Filter>Assets</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="readme.txt" />
